Bug 163410 - slideshow: outline text effect never renders highlight color
Summary: slideshow: outline text effect never renders highlight color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-13 10:53 UTC by Thorsten Behrens (allotropia)
Modified: 2024-10-17 05:10 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Test doc (13.94 KB, application/vnd.oasis.opendocument.presentation)
2024-10-13 10:59 UTC, Thorsten Behrens (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2024-10-13 10:53:10 UTC
Description:
See attached bugdoc - if both text highlight color, and text outline effect is set, the former never renders in slideshow mode.

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No

Additional Info:
.
Comment 1 Thorsten Behrens (allotropia) 2024-10-13 10:59:07 UTC
Created attachment 197027 [details]
Test doc
Comment 2 Commit Notification 2024-10-13 18:40:09 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e70c14134e899d3abb443761fe9f6a7249f724a

tdf#163410: fix missing text highlight color for outline text

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-10-17 05:10:10 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/65c3c83e3add38046fca2e50a2947518679cdfa7

tdf#163410: fix missing text highlight color for outline text

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.