tdf#163410: fix missing text highlight color for outline text

During slideshow, the combination outline text mode, and highlight
background color never worked. Adding cppcanvas code to handle it.

Change-Id: I9abb45fca4c89d206ebb431ff5675288e5deab43
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174872
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>